--- a/data/docker/nginx/etc/nginx/conf.d/site.conf
+++ b/data/docker/nginx/etc/nginx/conf.d/site.conf
@@ -1,6 +1,6 @@
 server {
     index index.php;
-    server_name oauth.lichess.org.docker;
+    server_name oauth.lidraughts.org.docker;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /data/public;
